# pose-based-fall-risk-prediction

./: .gitignore  FINAL_ARTIFACTS.sha256  README.md  pyproject.toml  requirements-lock.txt
app/macos/: .gitignore  FallGuard.spec  Info.plist  README.md  build_app.sh  build_native_app.sh  fallguard_ai.spec  issues.md  launch.command  profiles.json  pyproject.toml
app/macos/assets/: FallGuard.icns  README.md
app/macos/assets/locales/: zh.json
app/macos/docs/: Swift_Python_Migration_Plan.md
app/macos/models/: temporal_tuning_holdout_classifier.joblib  yolo_tail60_prefall_accel_classifier.joblib  yolo_tail60_prefall_accel_robust_classifier.joblib  yolo_tail60_prefall_accel_upperbody_classifier.joblib  yolo_tail60_prefall_activity_classifier.joblib
app/macos/native/: generate_xcode_project.sh
app/macos/native/FallGuard/: FRONTEND_TEXT_GUIDE.md
app/macos/native/FallGuard/App/: AppDelegate.swift  AppStore.swift  DesignSystem.swift  FallGuardApp.swift  GlassEffect.swift  MenuBarController.swift  ThemeManager.swift
app/macos/native/FallGuard/Features/: ContentView.swift
app/macos/native/FallGuard/Features/Dashboard/: DashboardView.swift
app/macos/native/FallGuard/Features/Events/: EventsView.swift
app/macos/native/FallGuard/Features/ImportMedia/: ImportMediaView.swift
app/macos/native/FallGuard/Features/Profiles/: ProfilesView.swift
app/macos/native/FallGuard/Features/Settings/: SettingsView.swift
app/macos/native/FallGuard/Models/: ServiceModels.swift
app/macos/native/FallGuard/Resources/: Info.plist
app/macos/native/FallGuard/Resources/en.lproj/: Localizable.strings
app/macos/native/FallGuard/Resources/zh.lproj/: Localizable.strings
app/macos/native/FallGuard/Services/: FallGuardAPIClient.swift  NotificationService.swift  PermissionService.swift  PreviewClient.swift  PythonServiceManager.swift  StatusPoller.swift
app/macos/scripts/: create_fallback_icon.py  create_icns.py  create_iconset.py
app/macos/src/fall_prediction/: __init__.py  __main__.py  camera.py  config.py  deep_dataset.py  deep_model.py  features.py  fusion_model.py  lowlight.py  lying_adl_filter.py  ml_features.py  ml_predictor.py  pose.py  predictor.py  risk.py  runtime.py  sensitivity.py  skeleton_dataset.py  video_app.py  window_dataset.py
app/macos/src/fall_prediction_desktop/: __init__.py  __main__.py  alert_service.py  data_services.py  event_media_buffer.py  event_service.py  frame_pipeline.py  gui.py  menubar.py  paths.py  risk_state_machine.py  runner.py  web_app.py
app/macos/src/fall_prediction_desktop/database/: __init__.py  database.py  init_db.py  schema.sql
app/macos/src/fall_prediction_desktop/database/repositories/: __init__.py  events.py  media.py  profiles.py  samples.py  (+2 more)
app/macos/src/fall_prediction_desktop/ui/: __init__.py  dataset_dialog.py  i18n.py  main_window.py  settings_dialog.py  theme.py  widgets.py
app/macos/src/fall_prediction_service/: __init__.py  __main__.py  app.py  auth.py  contracts.py  errors.py  lifecycle.py  serialization.py  server.py
app/macos/src/fallguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/macos/tests/: test_alert_service.py  test_database_layer.py  test_desktop_core.py  test_event_media_buffer.py  test_frame_pipeline.py  test_prediction_contract.py  test_risk_state_machine.py  test_service_auth.py  test_service_contract.py  test_service_lifecycle.py
app/macos/web/: app.js  i18n.js  index.html  settings.html  settings.js  styles-settings.css  styles.css
app/macos/web/locales/: en.json
(+79 files in other folders)
