[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fall-prediction"
version = "0.1.0"
description = "MediaPipe-based fall detection and pre-fall prediction prototype."
requires-python = ">=3.10,<3.13"
dependencies = [
    "opencv-python>=4.8",
    "mediapipe==0.10.14",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
yolo = [
    "ultralytics>=8.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
